@@ -1,5 +1,7 @@
 *0.11.0* *SVN*
 
+* Add "invoke" task for executing one-off commands
+
 * Make port selection smarter for gateway connections
 
 * Add extension mechanism for custom ST operations
